[package]

name = "nibble_vec"
version = "0.1.0"
description = "Vector data-structure for half-byte values."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

repository = "https://github.com/michaelsproul/rust_nibble_vec"
documentation = "https://docs.rs/rust_nibble_vec"
readme = "README.md"

keywords = ["vector", "nibble", "slice", "data-structure", "collection"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
smallvec = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "nib_bench"
harness = false

[lib]
bench = false

[badges]
travis-ci = { repository = "michaelsproul/rust_nibble_vec" }
maintenance = { status = "as-is" }
